--- a/index.html
+++ b/index.html
@@ -12,12 +12,8 @@
   </div>
 
   <div id="site">
-    <div class="hearts-container"></div>
-
     <div class="container">
       <div class="card" onclick="animarCard(this)">
-        <span class="corner top-left">♡</span>
-        <span class="corner top-right">♡</span>
         <img src="yaisha.jpg" alt="Yaisha" class="perfil" />
         <h2>♡</h2>
         <p class="texto">minha garota <3.</p>
@@ -25,8 +21,6 @@
         <div class="embed">
           <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6jgkEbmQ2F2onEqsEhiliL?utm_source=generator" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
-        <span class="corner bottom-left">♡</span>
-        <span class="corner bottom-right">♡</span>
       </div>
     </div>
 
@@ -43,29 +37,21 @@
       const audio = new Audio('musica.mp3');
       audio.loop = true;
       audio.play();
-
-      setInterval(criarCoracoes, 1000);
     }
 
     function animarCard(card) {
-      card.classList.add('clicado');
-      card.querySelector('.perfil').classList.add('girar');
-      setTimeout(() => {
-        card.classList.remove('clicado');
-        card.querySelector('.perfil').classList.remove('girar');
-      }, 800);
+      card.classList.toggle('entortado');
+      const img = card.querySelector('.perfil');
+      img.classList.add('girar');
+      setTimeout(() => img.classList.remove('girar'), 300);
     }
 
-    function criarCoracoes() {
-      const container = document.querySelector('.hearts-container');
-      const heart = document.createElement('span');
-      heart.textContent = '♡';
-      heart.className = 'float-heart';
-      heart.style.left = Math.random() * 100 + '%';
-      heart.style.animationDuration = (4 + Math.random() * 2) + 's';
-      container.appendChild(heart);
-      setTimeout(() => heart.remove(), 6000);
-    }
+    document.addEventListener('click', function (e) {
+      const card = document.querySelector('.card');
+      if (!card.contains(e.target) && card.classList.contains('entortado')) {
+        card.classList.remove('entortado');
+      }
+    });
   </script>
 </body>
 </html>
