--- a/index.html
+++ b/index.html
@@ -10,25 +10,26 @@
   <div id="confirmacao">
     <button onclick="mostrarSite()">luv</button>
   </div>
-
   <div id="site">
     <div class="container">
-      <div class="card" onclick="animarCard(this)">
-        <img src="yaisha.jpg" alt="Yaisha" class="perfil" />
+      <div class="card">
+        <span class="corner topleft">♡</span>
+        <span class="corner topright">♡</span>
+        <span class="corner bottomleft">♡</span>
+        <span class="corner bottomright">♡</span>
+        <img src="yaisha.jpg" alt="Yaisha" />
         <h2>♡</h2>
-        <p class="texto">minha garota <3.</p>
-        <p class="emote">(⁠っ⁠˘⁠з⁠(⁠˘⁠⌣⁠˘⁠ ⁠)</p>
+        <p>minha garota<3!!
+          (⁠っ⁠˘⁠з⁠(⁠˘⁠⌣⁠˘⁠ ⁠)</p>
         <div class="embed">
           <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6jgkEbmQ2F2onEqsEhiliL?utm_source=generator" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
       </div>
     </div>
-
     <footer>
       <p>♡</p>
     </footer>
   </div>
-
   <script>
     function mostrarSite() {
       document.getElementById('confirmacao').style.display = 'none';
@@ -38,20 +39,6 @@
       audio.loop = true;
       audio.play();
     }
-
-    function animarCard(card) {
-      card.classList.toggle('entortado');
-      const img = card.querySelector('.perfil');
-      img.classList.add('girar');
-      setTimeout(() => img.classList.remove('girar'), 300);
-    }
-
-    document.addEventListener('click', function (e) {
-      const card = document.querySelector('.card');
-      if (!card.contains(e.target) && card.classList.contains('entortado')) {
-        card.classList.remove('entortado');
-      }
-    });
   </script>
 </body>
 </html>
