--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@
     <button onclick="mostrarSite()">luv</button>
   </div>
 
-  <div id="site">
+  <div id="site" style="display:none; flex-direction: column; align-items: center;">
     <div class="container">
-      <div class="card" onclick="animarCard(this)">
+      <div class="card" onclick="animarCard(this)" style="flex-direction: column; align-items: center;">
         <img src="yaisha.jpg" alt="Yaisha" class="perfil" />
         <h2>minha garota ♡ ...</h2>
         <p>eu amo ela ! </p>
-        <div class="embed">
+        
+        <div id="custom-embed" style="margin-top: 15px; width: 100%; max-width: 480px; cursor: pointer;">
+          Carregando preview...
+        </div>
+
+        <div class="embed" style="margin-top: 15px;">
           <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6jgkEbmQ2F2onEqsEhiliL?utm_source=generator" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
       </div>
@@ -32,7 +37,8 @@
   <script>
     function mostrarSite() {
       document.getElementById('confirmacao').style.display = 'none';
-      document.getElementById('site').style.display = 'flex';
+      const site = document.getElementById('site');
+      site.style.display = 'flex';
       const audio = new Audio('musica.mp3');
       audio.loop = true;
       audio.play();
@@ -48,6 +54,38 @@
         card.classList.remove('clicado');
       }
     });
+
+    async function criarEmbedCustom(url) {
+      const container = document.getElementById('custom-embed');
+      try {
+        const res = await fetch(`https://jsonlink.io/api/extract?url=${encodeURIComponent(url)}`);
+        if (!res.ok) throw new Error('Erro ao buscar dados');
+        const data = await res.json();
+        const domain = url.replace(/(^\w+:|^)\/\//, '');
+        container.innerHTML = `
+          <img src="${data.images?.[0] || 'https://via.placeholder.com/80'}" alt="Ícone do site" 
+               style="width: 80px; height: 80px; border-radius: 12px; border: 2px solid #ccc; object-fit: cover; float: left; margin-right: 15px;" />
+          <div style="overflow: hidden;">
+            <h3 style="margin: 0 0 6px 0; font-weight: bold; color: #000; font-family: Arial, sans-serif;">my girl</h3>
+            <p style="margin: 0 0 6px 0; color: #555; font-size: 15px; font-family: Arial, sans-serif;">♡</p>
+            <small style="color: #888; font-size: 13px; font-family: Arial, sans-serif;">${domain}</small>
+          </div>
+        `;
+        container.style.display = 'flex';
+        container.style.alignItems = 'center';
+        container.style.border = '1px solid #ccc';
+        container.style.borderRadius = '10px';
+        container.style.padding = '12px';
+        container.style.boxShadow = '0 2px 6px rgba(0,0,0,0.1)';
+        container.style.background = '#fff';
+        container.style.cursor = 'pointer';
+        container.onclick = () => window.open(url, '_self');
+      } catch {
+        container.textContent = 'Não foi possível carregar o preview.';
+      }
+    }
+
+    criarEmbedCustom('https://yaisha.xyz');
   </script>
 </body>
 </html>
