--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <title>i luv my gf</title>
   <link rel="icon" href="https://i.postimg.cc/XJ8jyqNt/file-00000000e63c623085dc6adf67a51742.png" type="image/png" />
   <link rel="stylesheet" href="style.css" />
+  <meta property="og:title" content="my girl" />
+  <meta property="og:description" content="♡" />
+  <meta property="og:url" content="https://yaisha.xyz" />
+  <meta property="og:type" content="website" />
 </head>
 <body>
   <div id="confirmacao">
