--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
   <title>i luv my gf</title>
   <link rel="icon" href="https://i.postimg.cc/XJ8jyqNt/file-00000000e63c623085dc6adf67a51742.png" type="image/png" />
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-  <meta property="og:title" content="♡" />
-  <meta property="og:description" content="16.05" />
-  <meta property="og:url" content="https://yaisha.xyz" />
-  <meta property="og:type" content="website" />
 </head>
 <body>
   <div id="confirmacao">
@@ -21,16 +16,25 @@
     <div class="container">
       <div class="card" onclick="animarCard(this)">
         <img src="yaisha.jpg" alt="Yaisha" class="perfil" />
-        <h2 class="titulo-card">minha garota ♡ ...</h2>
+        <h2 class="titulo-card">
+          minha garota ♡ ...
+          <span class="listra-dir">______</span>
+        </h2>
         <p>eu amo ela !</p>
-        <a class="clique-texto" href="https://open.spotify.com/embed/track/6jgkEbmQ2F2onEqsEhiliL?utm_source=generator" target="_blank">✧⁠*⁠。clique aqui  ° ✧⁠*</a>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6jgkEbmQ2F2onEqsEhiliL?utm_source=generator&theme=0" width="100%" height="80" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; picture-in-picture" loading="lazy"></iframe>
       </div>
 
       <div class="card" onclick="animarCard(this)">
         <img src="p&y.jpg" alt="Us" class="perfil" />
-        <h2 class="titulo-card">us</h2>
+        <h2 class="titulo-card">
+          us
+          <span class="listra-dir">______</span>
+        </h2>
         <p id="timer" class="timer"></p>
-        <a href="https://open.spotify.com/playlist/7D2nPC3Psiiha3Tji7Zti0?si=EwDyxB1HQfa1CgkVl91eFQ" target="_blank" class="clique-texto">✧⁠*⁠。clique aqui  ° ✧⁠*</a>
+        <div class="clique-container">
+          <span class="listra-esq">______</span>
+          <a href="https://open.spotify.com/playlist/7D2nPC3Psiiha3Tji7Zti0?si=EwDyxB1HQfa1CgkVl91eFQ" target="_blank" class="clique-texto">✧⁠*⁠。clique aqui  ° ✧⁠*</a>
+        </div>
       </div>
     </div>
 
@@ -49,15 +53,12 @@
     }
 
     function animarCard(card) {
-      card.classList.add('clicado');
+      card.classList.toggle('clicado');
     }
 
     document.addEventListener('click', function (e) {
-      const cards = document.querySelectorAll('.card');
-      cards.forEach(c => {
-        if (!c.contains(e.target)) {
-          c.classList.remove('clicado');
-        }
+      document.querySelectorAll('.card').forEach(card => {
+        if (!card.contains(e.target)) card.classList.remove('clicado');
       });
     });
 
