--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h2 class="titulo-card">minha garota ♡ ...</h2>
         <div class="listra titulo-listra"></div>
         <p>eu amo ela !</p>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6jgkEbmQ2F2onEqsEhiliL?utm_source=generator&theme=0" width="100%" height="80" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; picture-in-picture" loading="lazy"></iframe>
+        <iframe style="border-radius:12px; margin-top: 10px;" src="https://open.spotify.com/embed/track/6jgkEbmQ2F2onEqsEhiliL?utm_source=generator&theme=0" width="100%" height="80" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; picture-in-picture" loading="lazy"></iframe>
       </div>
 
       <div class="card" onclick="animarCard(this)">
