--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>i luv my gf</title>
   <link rel="icon" href="https://i.postimg.cc/XJ8jyqNt/file-00000000e63c623085dc6adf67a51742.png" type="image/png" />
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
   <div id="confirmacao">
@@ -27,10 +28,6 @@
         <h2 class="titulo-card">us</h2>
         <div class="listra titulo-listra"></div>
         <p id="timer" class="timer"></p>
-        <div class="clique-container">
-          <a href="https://open.spotify.com/playlist/7D2nPC3Psiiha3Tji7Zti0?si=EwDyxB1HQfa1CgkVl91eFQ" target="_blank" class="clique-texto">✧⁠*⁠。clique aqui  ° ✧⁠*</a>
-          <div class="listra clique-listra"></div>
-        </div>
       </div>
     </div>
 
