--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>i luv my gf</title>
+  <style>
+    html, body {
+      background-color: #0f0f0f;
+      color: #fff;
+    }
+  </style>
   <link rel="icon" href="https://i.postimg.cc/XJ8jyqNt/file-00000000e63c623085dc6adf67a51742.png" type="image/png" />
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@200&display=swap" rel="stylesheet">
