--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>i luv my gf</title>
-  <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="https://i.postimg.cc/XJ8jyqNt/file-00000000e63c623085dc6adf67a51742.png" type="image/png" />
+  <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@200&display=swap" rel="stylesheet">
+  <meta property="og:title" content="♡" />
+  <meta property="og:description" content="16.05" />
+  <meta property="og:url" content="https://yaisha.xyz" />
+  <meta property="og:type" content="website" />
 </head>
 <body>
   <div id="confirmacao">
-    <button id="botaoLuv" onclick="mostrarSite()">luv</button>
+    <button onclick="mostrarSite()">luv</button>
   </div>
 
   <div id="site">
@@ -30,12 +34,9 @@
         <h2 class="titulo">us</h2>
         <div class="linha-titulo"></div>
         <p id="timer" class="timer"></p>
-        <a href="https://open.spotify.com/playlist/7D2nPC3Psiiha3Tji7Zti0?si=XqGjlqRoRlya3joJLIsElg&pi=Yt4ZUyfdTKe_Y" class="link-special" target="_blank">
-          °✧*⁠。clique aqui   °✧⁠*⁠。
-        </a>
+        <a href="https://open.spotify.com/playlist/7D2nPC3Psiiha3Tji7Zti0?si=XqGjlqRoRlya3joJLIsElg&pi=Yt4ZUyfdTKe_Y" class="link-special" target="_blank">°✧*⁠。clique aqui °✧⁠*⁠。</a>
       </div>
     </div>
-
     <footer>
       <p>♡</p>
     </footer>
@@ -46,11 +47,7 @@
       document.getElementById('confirmacao').style.display = 'none';
       const site = document.getElementById('site');
       site.style.display = 'flex';
-      site.style.opacity = 0;
-      setTimeout(() => {
-        site.style.transition = 'opacity 1s ease';
-        site.style.opacity = 1;
-      }, 10);
+      site.classList.add('fade-in');
       const audio = new Audio('musica.mp3');
       audio.loop = true;
       audio.play();
