--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>i luv my gf</title>
+  <style>
+    html, body {
+      background-color: #0f0f0f;
+      color: #fff;
+    }
+  </style>
   <link rel="icon" href="https://i.postimg.cc/XJ8jyqNt/file-00000000e63c623085dc6adf67a51742.png" type="image/png" />
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@200&display=swap" rel="stylesheet">
@@ -34,9 +40,12 @@
         <h2 class="titulo">us</h2>
         <div class="linha-titulo"></div>
         <p id="timer" class="timer"></p>
-        <a href="https://open.spotify.com/playlist/7D2nPC3Psiiha3Tji7Zti0?si=XqGjlqRoRlya3joJLIsElg&pi=Yt4ZUyfdTKe_Y" class="link-special" target="_blank">°✧*⁠。clique aqui °✧⁠*⁠。</a>
+        <a href="https://open.spotify.com/playlist/7D2nPC3Psiiha3Tji7Zti0?si=XqGjlqRoRlya3joJLIsElg&pi=Yt4ZUyfdTKe_Y" class="link-special" target="_blank">
+          °✧*⁠。clique aqui   °✧⁠*⁠。
+        </a>
       </div>
     </div>
+
     <footer>
       <p>♡</p>
     </footer>
@@ -45,9 +54,7 @@
   <script>
     function mostrarSite() {
       document.getElementById('confirmacao').style.display = 'none';
-      const site = document.getElementById('site');
-      site.style.display = 'flex';
-      site.classList.add('fade-in');
+      document.getElementById('site').style.display = 'flex';
       const audio = new Audio('musica.mp3');
       audio.loop = true;
       audio.play();
